--- a/css/styles.css
+++ b/css/styles.css
@@ -1763,6 +1763,46 @@ img,
     margin-bottom: var(--vspace-1);
 }
 
+/* --------------------------------------------------------------------
+ * ## proj style
+ * -------------------------------------------------------------------- */
+.project-item {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.project-image {
+    width: 300px; /* Adjust as needed */
+    height: auto;
+    border-radius: 8px;
+}
+
+.project-description {
+    max-width: 600px;
+}
+
+.project-description h3 {
+    margin: 0;
+    font-size: 20px;
+}
+
+.project-description h3 a {
+    text-decoration: none;
+    color: #007bff; /* Adjust link color */
+    transition: color 0.3s ease;
+}
+
+.project-description h3 a:hover {
+    color: #0056b3;
+}
+
+.project-description p {
+    font-size: 16px;
+    color: #666;
+}
+
 
 /* ===================================================================
  * # PRELOADER
